--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 /* half of this class tag is in the html file already */
-.-text {
+.text {
   animation: rainbow 5s linear infinite;
   -webkit-background-clip: text;
   -webkit-animation: rainbow 5s linear infinite;
